--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,15 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-/* input[type='range'] {
-  background: #eef1f6;
-  border-radius: 3px;
-  height: 6px;
-  width: 100%;
-  margin-top: 15px;
-  margin-bottom: 15px;
-  outline: 0;
-} */
+html {
+  background: #f3f4f6;
+}
 
 input[type='range']::-webkit-slider-thumb {
   appearance: none;
